# KN-41_sol

./: README.md
.github/workflows/: codecov.yml  python-app.yml  workflow_1.yml  workflow_2.yml
1_lab/: README.md  my.py  my_first_app.ipynb
3_lab/: my_mass_with_group.npz  temp_with_group.csv
4_lab/: 2.ipynb  3_1.ipynb  my_mass.npz
exam_sol/: main.py  readme.md  test.py
init/: README.md
matplotlib_basics/4_lab/: README.md  notebook.ipynb
matplotlib_basics/5_lab/: README.md  notebook.ipynb
numerical_methods/1_lab/: my_first_app.ipynb
numerical_methods/2_lab/: README.md  example.ipynb  my2.ipynb
numerical_methods/3_lab/: 1.ipynb  1_1.ipynb  2_1.ipynb  README.md
numerical_methods/4_lab/: 1_1.ipynb  README.md  temp.csv
numerical_methods/zalik_1_semester/: 1.ipynb
testing/1_lab/: .gitignore  Pipfile  README.md
testing/1_lab/myproject/: pyproject.toml
testing/2_lab/: .gitignore  Pipfile  README.md  app.py  assert_class.py  assert_input.py  assert_raise.py  assert_test.py  check_app.py  test_app.py
testing/3_lab/: README.md
