[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "osoldanchyn20",email = "osoldanchyn2021@itcollege.lviv.ua"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "myproject", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
